--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : awayosiyasu Home
+title : awayosiyasu web site
 #tagline: Site Tagline
 author :
-  name : Yasuhiro Yoshikawa
+  # name : Yasuhiro Yoshikawa
   # email : awayosiyasu@gmail.com
   github : awayosiyasu
   twitter : awa_yosi_yasu
@@ -80,7 +80,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : false
     disqus :
       short_name : jekyllbootstrap
     livefyre :
@@ -98,7 +98,7 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : google 
+    provider : false
     google : 
         tracking_id : 'UA-123-12'
     getclicky :
