--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ highlighter: pygments
 title : awayosiyasu web site
 #tagline: Site Tagline
 author :
-  # name : Yasuhiro Yoshikawa
+  name : awayosiyasu
   # email : awayosiyasu@gmail.com
   github : awayosiyasu
   twitter : awa_yosi_yasu
