--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ highlighter: rouge
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : awayosiyasu web site
+title : Y.Yoshikawa Blog
 #tagline: Site Tagline
 author :
-  name : awayosiyasu
+  name : Yasuhiro Yoshikawa
   # email : awayosiyasu@gmail.com
   github : awayosiyasu
   twitter : awa_yosi_yasu
